# clubhouse-bouncer

./: .dockerignore  .env.development  .env.example  .gitignore  .prowl.yml  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.builder  README.md  deployable.sh  openapi.yml
scripts/: build-image.sh  deploy-master.sh  deploy-tag.sh
src/: bouncer.rs  clubhouse.rs  config.rs  error.rs  main.rs
src/routes/: mod.rs
static/: openapi.html
