[package]
name = "bouncer"
version = "0.1.0"
authors = ["Tom Milligan <tommilligan@users.noreply.github.com >"]

[dependencies]
futures = "0.1.23"
hyper = "0.12.8"
hyper-tls = "0.3.0"
log = "0.4.4"
pretty_env_logger = "0.2.4"
serde = "1.0.74"
serde_derive = "1.0.74"
serde_json = "1.0.26"
url = "1.7.1"
